--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>navigator.connection.type Example</title>
+    <title>navigator.Connection.WIFI Example</title>
 
     <script type="text/javascript" charset="utf-8" src="cordova-2.9.0.js"></script>
     <script type="text/javascript" charset="utf-8">
@@ -17,7 +17,7 @@
     }
 
         function checkConnection() {
-            var networkState = navigator.connection.type;
+            var networkState = navigator.Connection.WIFI;
 
             var states = {};
             states[Connection.UNKNOWN]  = 'Unknown connection';
